// Vitest Snapshot v1

exports[`should build \`custom-dist\` package 1`] = `
"\\"use strict\\";Object.defineProperty(exports,\\"__esModule\\",{value:!0});exports.VERSION=\\"1.0.0\\";
//# sourceMappingURL=index.cjs.map
"
`;

exports[`should build \`custom-dist\` package 2`] = `
"const o=\\"1.0.0\\";export{o as VERSION};
//# sourceMappingURL=index.js.map
"
`;

exports[`should build \`custom-dist\` package 3`] = `
"/** @public */
export declare const VERSION = '1.0.0'

export {}
"
`;

exports[`should build \`exports-dummy\` package 1`] = `
"/** @public */
export declare const format: string

/** @public */
export declare const path: string

/** @public */
export declare const runtime: string

export {}
"
`;

exports[`should build \`exports-dummy\` package 2`] = `
"\\"use strict\\";Object.defineProperty(exports,\\"__esModule\\",{value:!0});exports.format=\\"commonjs\\",exports.path=\\"dist/index.cjs\\",exports.runtime=\\"*\\";
//# sourceMappingURL=index.cjs.map
"
`;

exports[`should build \`exports-dummy\` package 3`] = `
"const s=\\"esm\\",e=\\"*\\",t=\\"dist/index.js\\";export{s as format,t as path,e as runtime};
//# sourceMappingURL=index.js.map
"
`;

exports[`should build \`exports-dummy\` package 4`] = `
"const s=\\"esm\\",e=\\"browser\\",r=\\"dist/index.browser.js\\";export{s as format,r as path,e as runtime};
//# sourceMappingURL=index.browser.js.map
"
`;

exports[`should build \`exports-dummy\` package 5`] = `
"/** @public */
export declare const format: string

/** @public */
export declare const path: string

/** @public */
export declare const runtime: string

export {}
"
`;

exports[`should build \`exports-dummy\` package 6`] = `
"\\"use strict\\";Object.defineProperty(exports,\\"__esModule\\",{value:!0});exports.format=\\"commonjs\\",exports.path=\\"dist/extra.cjs\\",exports.runtime=\\"*\\";
//# sourceMappingURL=extra.cjs.map
"
`;

exports[`should build \`exports-dummy\` package 7`] = `
"const s=\\"esm\\",t=\\"*\\",e=\\"dist/extra.js\\";export{s as format,e as path,t as runtime};
//# sourceMappingURL=extra.js.map
"
`;

exports[`should build \`exports-dummy\` package 8`] = `
"const r=\\"esm\\",s=\\"browser\\",e=\\"dist/extra.browser.js\\";export{r as format,e as path,s as runtime};
//# sourceMappingURL=extra.browser.js.map
"
`;

exports[`should build \`multi-export\` package 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
function defineConfig(options) {
  return options;
}
function definePlugin(plugin) {
  return plugin;
}
exports.defineConfig = defineConfig;
exports.definePlugin = definePlugin;
//# sourceMappingURL=index.cjs.map
"
`;

exports[`should build \`multi-export\` package 2`] = `
"function defineConfig(options) {
  return options;
}
function definePlugin(plugin) {
  return plugin;
}
export { defineConfig, definePlugin };
//# sourceMappingURL=index.js.map
"
`;

exports[`should build \`multi-export\` package 3`] = `
"/** @public */
export declare interface Config extends Plugin_2 {
  plugins?: Plugin_2[]
}

/** @public */
export declare function defineConfig(options: Config): Config

/** @public */
export declare function definePlugin(plugin: Plugin_2): Plugin_2

/** @public */
declare interface Plugin_2 {
  name: string
}
export {Plugin_2 as Plugin}

export {}
"
`;

exports[`should build \`multi-export\` package 4`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
var multiExport = require('multi-export');
function plugin() {
  return multiExport.definePlugin({
    name: \\"plugin\\"
  });
}
exports.plugin = plugin;
//# sourceMappingURL=plugin.cjs.map
"
`;

exports[`should build \`multi-export\` package 5`] = `
"import { definePlugin } from 'multi-export';
function plugin() {
  return definePlugin({
    name: \\"plugin\\"
  });
}
export { plugin };
//# sourceMappingURL=plugin.js.map
"
`;

exports[`should build \`multi-export\` package 6`] = `
"/** @public */
export declare function plugin(): Plugin_2

/** @public */
declare interface Plugin_2 {
  name: string
}

export {}
"
`;

exports[`should build \`ts\` package 1`] = `
"/**
 * @internal
 */
export declare interface _Dummy {
  field: string
}

/**
 * @public
 */
export declare interface IncludedModuleDummy {
  field: string
}

/** @public */
export declare const VERSION = '1.0.0'

export {}

declare module './module2' {
  interface IncludedModuleDummy {
    addedField: string
  }
}
//# sourceMappingURL=module1.d.ts.map
"
`;
